<resources>
    <string name="app_name">Jera WatchList</string>
    <string name="facebook_app_id">1632819363589391</string>
    <string name="fb_login_protocol_scheme">fb1632819363589391</string>
    <string name="user">Usuario</string>
    <string name="email">Email</string>
    <string name="password">Senha</string>
    <string name="birthdate">Data de Nascimento</string>
    <string name="signup">Cadastrar</string>
    <string name="login">Entrar</string>
    <string name="logout">Deslogar</string>
    <string name="new_profile">criar novo perfil</string>
    <string name="back">Voltar</string>
    <string name="popular_movies">Filmes Populares</string>
    <string name="watchlist">Para Assistir</string>
    <string name="watched">Assistido</string>
    <string name="search">Pesquisar mais!</string>
    <string name="discover">Recomendados</string>
    <string name="keyword">Pesquisar termo</string>
    <string name="profile_name">Nome do Perfil</string>
    <string name="create">Criar</string>
    <string name="delete_profile">Deletar Perfil</string>
</resources>